# OpenHands

./: AGENTS.md  pyproject.toml
.github/workflows/: _build-image.yml  ghcr-build.yml  pr-readiness-confirm.yml  py-tests.yml  pypi-release.yml  tag-image.yml
containers/app/: Dockerfile
dev_config/python/: .pre-commit-config.yaml
enterprise/: Dockerfile  allhands-realm-github-provider.json.tmpl  pyproject.toml  saas_server.py
enterprise/integrations/: resolver_context.py  utils.py
enterprise/migrations/versions/: 109_add_max_concurrent_sandboxes.py  112_add_max_concurrent_sandboxes.py  113_add_display_name_to_conversation_metadata.py  113_add_llm_profiles_to_org.py  113_add_max_concurrent_sandboxes.py
enterprise/server/: config.py  logger.py
enterprise/server/auth/: authorization.py  org_context.py  saas_user_auth.py  sheets_client.py
enterprise/server/routes/: auth.py  org_models.py  org_profiles.py  orgs.py
enterprise/server/routes/integration/: bitbucket.py  bitbucket_dc.py  github.py
enterprise/server/services/: automation_event_service.py
enterprise/server/utils/: saas_pending_message_injector.py
enterprise/storage/: bitbucket_dc_webhook_store.py  bitbucket_webhook_store.py  org.py  org_service.py  saas_settings_store.py  user_store.py
enterprise/tests/unit/: test_gitlab_resolver.py  test_logger.py  test_org_models_concurrency_limits.py  test_org_profiles.py
enterprise/tests/unit/storage/: test_bitbucket_webhook_store.py  test_saas_sql_app_conversation_info_service.py
frontend/: node_modules  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/__tests__/hooks/: use-auth-callback.test.ts  use-settings-nav-items.test.tsx
frontend/__tests__/hooks/mutation/: use-new-conversation-command.test.tsx
frontend/__tests__/routes/: acp-settings.test.tsx  agent-settings.test.tsx  app-settings.test.tsx  llm-settings.test.tsx  manage-org.test.tsx  root-layout.test.tsx  settings.test.tsx
frontend/__tests__/utils/: acp-env.test.ts  shell-tokenize.test.ts
frontend/src/: entry.client.tsx  index.css  root.tsx  routes.ts  tailwind.css
frontend/src/api/: open-hands.types.ts
frontend/src/constants/: settings-nav.tsx
frontend/src/context/: theme-context.tsx  ws-client-provider.tsx
frontend/src/data/: skill-registry.ts
frontend/src/hooks/: use-acp-guard.ts  use-agent-state.test.tsx  use-auth-callback.ts  use-concurrency-limit-error.test.ts  use-concurrency-limit-error.ts  use-settings-nav-items.ts  use-terminal.ts
frontend/src/hooks/query/: use-settings.ts  (+3 more)
frontend/src/i18n/: declaration.ts  translation.json
frontend/src/routes/: accept-tos.tsx  acp-settings.tsx  agent-settings.tsx  api-keys.tsx  app-settings.tsx  billing.tsx  browser-tab.tsx  changes-tab.tsx  condenser-settings.tsx  conversation.tsx  device-verify.tsx  diagrams-tab.tsx  git-settings.tsx  home.tsx  information-request.tsx  jupyter-tab.tsx  launch.tsx  llm-settings.tsx  login.tsx  manage-org.tsx  manage-organization-members.tsx  mcp-settings.tsx  onboarding-form.tsx  org-default-condenser-settings.tsx  org-default-llm-settings.tsx  org-default-verification-settings.tsx  org-settings.tsx  planner-tab.tsx  root-layout.tsx  secrets-settings.tsx  served-tab.tsx  settings-connectors.tsx  settings-limits.tsx  settings-profile.tsx  settings-security.tsx  settings-theme.tsx  settings-usage.tsx  settings-vault.tsx  settings-workspace.tsx  settings.tsx  (+6 more)
frontend/src/services/: settings.ts
frontend/src/state/: conversation-store.ts  jupyter-store.ts
frontend/src/stores/: compact-store.ts  context-pressure-store.ts  external-state-store.ts  metrics-store.ts
frontend/src/types/: settings.ts
frontend/src/ui/: card.tsx  context-menu.tsx  divider.tsx
frontend/src/utils/: acp-env.ts  agent-display-label.ts  custom-toast-handlers.tsx  expand-slash-command.ts  feature-flags.ts  websocket-url.ts
openhands/agenthub/cloudguard_agent/: cloudguard_agent.py
openhands/agenthub/codeact_agent/: codeact_agent.py
openhands/app_server/: app.py  config.py  middleware.py
openhands/app_server/app_conversation/: agent_server_routing.py  app_conversation_models.py  app_conversation_router.py  live_status_app_conversation_service.py  sql_app_conversation_info_service.py
openhands/app_server/event_callback/: webhook_router.py
openhands/app_server/file_store/: local.py
openhands/app_server/integrations/: service_types.py
openhands/app_server/sandbox/: docker_sandbox_service.py  process_sandbox_service.py  remote_sandbox_service.py  sandbox_service.py  sandbox_spec_service.py
openhands/app_server/settings/: settings_models.py  settings_router.py  settings_store.py
openhands/app_server/user/: auth_user_context.py  user_context.py
openhands/app_server/utils/: async_utils.py  circuit_breaker.py  jupyter_kernel.py  llm_metadata.py  logger.py
openhands/app_server/web_client/: default_web_client_config_injector.py  web_client_models.py
openhands/app_server/websocket_proxy/: __init__.py  websocket_proxy_router.py
openhands/controller/: agent_controller.py
openhands/events/: stream.py
openhands/llm/: context_limits.py  llm.py
openhands/server/session/: __init__.py  delegate_transcript.py  external_state.py  session.py  session_resume.py  session_state.py
openhands/server/user_auth/: user_auth.py
openhands/services/compact/: cloud_working_set.py  compact_pipeline.py  post_compact.py
openhands/services/skills/: __init__.py  provider_check.py  registry.py
openhands/storage/: fast_metadata.py  transcript_writer.py
scripts/: create_skill.py  e2e_dispatch_test.py  generate_skill_index.py  migrate_skills.py  scaffold_v3_aws_structure.py  validate_skills.py
tests/integration/: test_context_layers_e2e.py
tests/unit/app_server/: test_acp_file_secrets.py  test_live_status_app_conversation_service.py  test_profiles_api.py  test_settings_api.py  test_webhook_router_acp.py  test_websocket_proxy_router.py
tests/unit/llm/: test_context_limits.py  test_latch_helpers.py
tests/unit/storage/: test_fast_metadata.py  test_transcript_writer.py
(+186 files in other folders)
