[build-system]
build-backend = "poetry.core.masonry.api"
# PEP 621 project metadata (for UV compatibility)
# This section coexists with [tool.poetry] during the migration period
requires = [ "poetry-core==2.3.2" ]

[project]
name = "openhands-ai"
description = "OpenHands: Code Less, Make More"
readme = "README.md"
license = "MIT"
authors = [ { name = "OpenHands", email = "contact@all-hands.dev" } ]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# Version is managed dynamically by poetry-dynamic-versioning
dynamic = [ "version" ]

# Main dependencies (mirrors [tool.poetry.dependencies] for UV compatibility)
dependencies = [
  "aiohttp==3.13.4",
  "anthropic[vertex]==0.97.0",
  "anyio==4.9.0",
  "asyncpg==0.31.0",
  "authlib==1.7.0",
  "bashlex==0.18",
  "boto3==1.42.95",
  "browsergym-core==0.13.3",
  "deprecated==1.3.1",
  "deprecation==2.1.0",
  "dirhash==0.5.0",
  "docker==7.1.0",
  "fastapi==0.136.1",
  "fastmcp==3.2.4",
  "google-api-python-client==2.194.0",
  "google-auth-httplib2==0.3.1",
  "google-auth-oauthlib==1.3.1",
  "google-cloud-aiplatform==1.148.1",
  "google-genai==1.73.1",
  "html2text==2025.4.15",
  "httpx-aiohttp==0.1.12",
  "ipywidgets==8.1.8",
  "jinja2==3.1.6",
  "joblib==1.5.3",
  "json-repair==0.59.5",
  "jupyter-kernel-gateway==3.0.1",
  "jwcrypto==1.5.7",
  "kubernetes==35.0.0",
  "libtmux==0.55.1",
  "litellm==1.83.14",
  "lmnr==0.7.51",
  "mcp==1.27.0",
  "memory-profiler==0.61.0",
  "numpy==2.4.4",
  "openai==2.24.0",
  "openhands-aci==0.3.3",
  "openhands-agent-server==1.21.1",
  "openhands-sdk==1.21.1",
  "openhands-tools==1.21.1",
  "opentelemetry-api==1.39.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
  "orjson==3.11.8",
  "pathspec==1.1.0",
  "pexpect==4.9.0",
  "pg8000==1.31.5",
  "pillow==12.2.0",
  "playwright==1.58.0",
  "poetry==2.3.4",
  "prompt-toolkit==3.0.52",
  "protobuf==5.29.6",
  "psutil==7.2.2",
  "pybase62==1.0.0",
  "pygithub==2.9.1",
  "pyjwt==2.12.1",
  "pylatexenc==2.10",
  "pypdf==6.10.2",
  "python-docx==1.2.0",
  "python-dotenv==1.2.2",
  "python-frontmatter==1.1.0",
  "python-json-logger==4.1.0",
  "python-multipart==0.0.26",
  "python-pptx==1.0.2",
  "python-socketio==5.14.0",
  "pythonnet==3.0.5; sys_platform=='win32'",
  "pyyaml==6.0.3",
  "qtconsole==5.7.2",
  "rapidfuzz==3.14.5",
  "redis==6.4.0",
  "requests==2.33.1",
  "setuptools==82.0.1",
  "shellingham==1.5.4",
  "sqlalchemy[asyncio]==2.0.49",
  "sse-starlette==3.3.4",
  "starlette==1.0.0",
  "tenacity==9.1.4",
  "termcolor==3.3.0",
  "toml==0.10.2",
  "tornado==6.5.5",
  "types-toml==0.10.8.20260408",
  "urllib3==2.6.3",
  "uvicorn==0.46.0",
  "whatthepatch==1.0.7",
  "zope-interface==7.2",
]

urls.Homepage = "https://github.com/OpenHands/OpenHands"
urls.Repository = "https://github.com/OpenHands/OpenHands"

[dependency-groups]
dev = [
  "build==1.4.4",
  "mypy==1.17.0",
  "pre-commit==4.2.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "ruff==0.12.5",
  "types-setuptools==82.0.0.20260408",
]
test = [
  "gevent==25.9.1",
  "pandas==3.0.2",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "pytest-forked==1.6.0",
  "pytest-playwright==0.7.2",
  "pytest-timeout==2.4.0",
  "pytest-xdist==3.8.0",
  "reportlab==4.4.10",
]
runtime = [
  "flake8==7.3.0",
  "jupyterlab==4.5.6",
  "notebook==7.5.5",
]

[tool.poetry]
name = "openhands-ai"
version = "1.7.0"
description = "OpenHands: Code Less, Make More"
authors = [ "OpenHands" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenHands/OpenHands"
packages = [
  { include = "openhands/**/*" },
  { include = "pyproject.toml", to = "openhands" },
  { include = "poetry.lock", to = "openhands" },
]
include = [
  "skills/**/*",
]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
authlib = "==1.7.0"                                 # CVE-2026-27962 (fixed in 1.6.9)
orjson = "==3.11.8"                                 # Pinned to fix CVE-2025-67221
litellm = "==1.83.14"                               # avoid 1.64.4 (known bug) & 1.67.* (known bug #10272)
openai = "==2.24.0"                                 # Pin because litellm 1.83.14 requires 2.24.0 and is incompatible with >=1.100.0 (BerriAI/litellm#13711)
aiohttp = "==3.13.4"                                # Keep aiohttp on a fixed-or-newer release while allowing litellm's pinned 3.13.4
google-genai = "==1.73.1"                           # To use litellm with Gemini Pro API
google-api-python-client = "==2.194.0"              # For Google Sheets API
google-auth-httplib2 = "==0.3.1"                    # For Google Sheets authentication
google-auth-oauthlib = "==1.3.1"                    # For Google Sheets OAuth
termcolor = "==3.3.0"
docker = "==7.1.0"
fastapi = "==0.136.1"
toml = "==0.10.2"
types-toml = "==0.10.8.20260408"
uvicorn = "==0.46.0"
numpy = "==2.4.4"
json-repair = "==0.59.5"
browsergym-core = "==0.13.3"                        # integrate browsergym-core as the browsing interface
playwright = "==1.58.0"
html2text = "==2025.4.15"
deprecated = "==1.3.1"
pexpect = "==4.9.0"
jinja2 = "==3.1.6"
python-multipart = "==0.0.26"
tenacity = "==9.1.4"
zope-interface = "==7.2"
pathspec = "==1.1.0"
pyjwt = "==2.12.1"
dirhash = "==0.5.0"
tornado = "==6.5.5"
python-dotenv = "==1.2.2"
rapidfuzz = "==3.14.5"
whatthepatch = "==1.0.7"
protobuf = "==5.29.6"                               # Updated to fix CVE-2026-0994
opentelemetry-api = "==1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "==1.39.1"

libtmux = "==0.55.1"
pygithub = "==2.9.1"
joblib = "==1.5.3"
openhands-aci = "==0.3.3"
python-socketio = "==5.14.0"
sse-starlette = "==3.3.4"
psutil = "==7.2.2"
python-json-logger = "==4.1.0"
prompt-toolkit = "==3.0.52"
poetry = "==2.3.4"
anyio = "==4.9.0"
pythonnet = { version = "==3.0.5", markers = "sys_platform == 'win32'" }
fastmcp = "==3.2.4"
python-frontmatter = "==1.1.0"
shellingham = "==1.5.4"
# TODO: Should these go into the runtime group?
ipywidgets = "==8.1.8"
qtconsole = "==5.7.2"
python-pptx = "==1.0.2"
pylatexenc = "==2.10"
python-docx = "==1.2.0"
bashlex = "==0.18"

# Explicitly pinned packages for latest versions
pypdf = "==6.10.2"
pillow = "==12.2.0"
starlette = "==1.0.0"
urllib3 = "==2.6.3"
requests = "==2.33.1"
setuptools = "==82.0.1"

# TODO: These are integrations that should probably be optional
redis = "==6.4.0"

google-cloud-aiplatform = "==1.148.1"
anthropic = { extras = [ "vertex" ], version = "==0.97.0" }
boto3 = "==1.42.95"
kubernetes = "==35.0.0"
pyyaml = "==6.0.3"
memory-profiler = "==0.61.0"
jupyter_kernel_gateway = "==3.0.1"

# Third-party runtime dependencies (optional)
modal = { version = "==0.66.26", optional = true }
runloop-api-client = { version = "==0.50.0", optional = true }
daytona = { version = "==0.24.2", optional = true }
httpx-aiohttp = "==0.1.12"
e2b-code-interpreter = { version = "==2.0.0", optional = true }
pybase62 = "==1.0.0"

# V1 dependencies
openhands-sdk = "==1.21.1"
openhands-agent-server = "==1.21.1"
openhands-tools = "==1.21.1"
jwcrypto = "==1.5.7"
sqlalchemy = { extras = [ "asyncio" ], version = "==2.0.49" }
pg8000 = "==1.31.5"
asyncpg = "==0.31.0"
deprecation = "==2.1.0"
lmnr = "==0.7.51"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "==0.12.5"
mypy = "==1.17.0"
pre-commit = "==4.2.0"
build = "==1.4.4"
types-setuptools = "==82.0.0.20260408"
pytest = "==9.0.3"
pytest-asyncio = "==1.3.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "==9.0.3"
pytest-cov = "==7.1.0"
pytest-asyncio = "==1.3.0"
pytest-forked = "==1.6.0"
pytest-xdist = "==3.8.0"
pytest-playwright = "==0.7.2"
pytest-timeout = "==2.4.0"
pandas = "==3.0.2"
reportlab = "==4.4.10"
gevent = "==25.9.1"

[tool.poetry.group.runtime]
optional = true

[tool.poetry.group.runtime.dependencies]
jupyterlab = "==4.5.6"
notebook = "==7.5.5"
flake8 = "==7.3.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff]
lint.select = [ "D" ]
# ignore warnings for missing docstrings
lint.ignore = [ "D1" ]
lint.pydocstyle.convention = "google"

[tool.coverage.run]
concurrency = [ "gevent" ]
relative_files = true
omit = [ "enterprise/tests/*", "**/test_*" ]
